# sx-obsplan

./: .gitignore  README.md  pyproject.toml
data/: sbdb_query_results_comet_ver250926.csv  sbdb_query_results_comet_ver260105.csv  sbdb_query_results_comet_ver260316.csv
notebook/: _tmp.ipynb  obsplan-allcomet.ipynb  obsplan-example.ipynb  obsplan-single.ipynb  obsplan.ipynb  query-allcomet.ipynb  query-ephemeris.ipynb  test.ipynb
notebooks/: _rcparams.py  make-obsplan-allcomet.py  obsplan-allcomet.ipynb  obsplan-example.ipynb  query-allcomet.ipynb  query-example.ipynb  test.ipynb
sxobsplan/: __init__.py  _obsplan.py  obsplan.py  query.py
